--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="tooltip">Notifications</div>
             </div>
             <div class="profile-picture-container">
-                <img class="channel" src="\my-channel.jpg">
+                <img class="channel" src="img/icons/my-channel.jpg">
                 <div class="tooltip">Profile</div>
             </div>
         </div>
